Fix alignment icons

--- a/app/assets/stylesheets/components/_cards-bookings-new.scss
+++ b/app/assets/stylesheets/components/_cards-bookings-new.scss
@@ -1,10 +1,14 @@
 .cards-bookings-new {
-display: flex;
+  display: flex;
 }
 
 .card-service {
-  display: flex;
-  flex-wrap: wrap;
-  border: 1px solid black;
-  padding: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: baseline;
+  // display: flex;
+  // flex-wrap: wrap;
+  // border: 1px solid black;
+  // padding: 15px;
 }
+
